updating diff-eta calculation

--- a/analysis-local.ipynb
+++ b/analysis-local.ipynb
@@ -480,9 +480,9 @@
     "        lll_lightjets = jets_3lep[jets_3lep.btagCSVV2 <= loose_wp]\n",
     "        lll_jetcross = jets_3lep[jets_3lep.btagCSVV2 > loose_wp].cross(lll_lightjets[lll_lightjets.eta == lll_lightjets.eta.max()])\n",
     "        lll_fwdJet_leadbJet = lll_jetcross[lll_jetcross.counts >= 1][:, 0]\n",
-    "        lll_fwdJet_leadbJet = np.abs((lll_fwdJet_leadbJet.i0 - lll_fwdJet_leadbJet.i1).eta)\n",
+    "        lll_fwdJet_leadbJet = np.abs(lll_fwdJet_leadbJet.i0.eta - lll_fwdJet_leadbJet.i1.eta)\n",
     "        lll_fwdJet_subleadbJet = lll_jetcross[lll_jetcross.counts >= 2][:, 1]\n",
-    "        lll_fwdJet_subleadbJet = np.abs((lll_fwdJet_subleadbJet.i0 - lll_fwdJet_subleadbJet.i1).eta)\n",
+    "        lll_fwdJet_subleadbJet = np.abs(lll_fwdJet_subleadbJet.i0.eta - lll_fwdJet_subleadbJet.i1.eta).eta\n",
     "        lll_fwdJet_closestLepton = channel_fwdeta_jetlep(tight_lll_e.starts, tight_lll_e.stops, tight_lll_mu.starts, tight_lll_mu.stops,\n",
     "                                              lll_lightjets.eta.max(), tight_lll_e.eta.content, tight_lll_mu.eta.content)\n",
     "        lll_highpT_sslp = channel_dphi_ssp(tight_lll_e.starts, tight_lll_e.stops, tight_lll_mu.starts, tight_lll_mu.stops,\n",
@@ -500,9 +500,9 @@
     "        mumu_lightjets = jets_2mu[jets_2mu.btagCSVV2 <= loose_wp]\n",
     "        mumu_jetcross = jets_2mu[jets_2mu.btagCSVV2 > loose_wp].cross(mumu_lightjets[mumu_lightjets.eta == mumu_lightjets.eta.max()])\n",
     "        mumu_fwdJet_leadbJet = mumu_jetcross[mumu_jetcross.counts >= 1][:, 0]\n",
-    "        mumu_fwdJet_leadbJet = np.abs((mumu_fwdJet_leadbJet.i0 - mumu_fwdJet_leadbJet.i1).eta)\n",
+    "        mumu_fwdJet_leadbJet = np.abs(mumu_fwdJet_leadbJet.i0.eta - mumu_fwdJet_leadbJet.i1.eta)\n",
     "        mumu_fwdJet_subleadbJet = mumu_jetcross[mumu_jetcross.counts >= 2][:, 1]\n",
-    "        mumu_fwdJet_subleadbJet = np.abs((mumu_fwdJet_subleadbJet.i0 - mumu_fwdJet_subleadbJet.i1).eta)\n",
+    "        mumu_fwdJet_subleadbJet = np.abs(mumu_fwdJet_subleadbJet.i0.eta - mumu_fwdJet_subleadbJet.i1.eta)\n",
     "        mumu_fwdJet_closestLepton = (mumu_lightjets.eta.max() - tights_2mu.eta).min()\n",
     "        mumu_fwdJet_closestLepton = mumu_fwdJet_closestLepton[np.invert(np.isinf(mumu_fwdJet_closestLepton))]\n",
     "        mumu_highpT_sslp = tights_2mu[np.abs(tights_2mu.charge[:, 0] + tights_2mu.charge[:, 1]) == 2]\n",
@@ -517,9 +517,9 @@
     "        emu_lightjets = jets_emu[jets_emu.btagCSVV2 <= loose_wp]\n",
     "        emu_jetcross = jets_emu[jets_emu.btagCSVV2 > loose_wp].cross(emu_lightjets[emu_lightjets.eta == emu_lightjets.eta.max()])\n",
     "        emu_fwdJet_leadbJet = emu_jetcross[emu_jetcross.counts >= 1][:, 0]\n",
-    "        emu_fwdJet_leadbJet = np.abs((emu_fwdJet_leadbJet.i0 - emu_fwdJet_leadbJet.i1).eta)\n",
+    "        emu_fwdJet_leadbJet = np.abs(emu_fwdJet_leadbJet.i0.eta - emu_fwdJet_leadbJet.i1.eta)\n",
     "        emu_fwdJet_subleadbJet = emu_jetcross[emu_jetcross.counts >= 2][:, 1]\n",
-    "        emu_fwdJet_subleadbJet = np.abs((emu_fwdJet_subleadbJet.i0 - emu_fwdJet_subleadbJet.i1).eta)\n",
+    "        emu_fwdJet_subleadbJet = np.abs(emu_fwdJet_subleadbJet.i0.eta - emu_fwdJet_subleadbJet.i1.eta)\n",
     "        mu_fwdJet_closestLepton = (emu_lightjets.eta.max() - tights_1mu.eta)\n",
     "        e_fwdJet_closestLepton = (emu_lightjets.eta.max() - tights_1e.eta)\n",
     "        emu_fwdJet_closestLepton = np.minimum(mu_fwdJet_closestLepton, e_fwdJet_closestLepton)\n",
@@ -537,9 +537,9 @@
     "        ee_lightjets = jets_2e[jets_2e.btagCSVV2 <= loose_wp]\n",
     "        ee_jetcross = jets_2e[jets_2e.btagCSVV2 > loose_wp].cross(ee_lightjets[ee_lightjets.eta == ee_lightjets.eta.max()])\n",
     "        ee_fwdJet_leadbJet = ee_jetcross[ee_jetcross.counts >= 1][:, 0]\n",
-    "        ee_fwdJet_leadbJet = np.abs((ee_fwdJet_leadbJet.i0 - ee_fwdJet_leadbJet.i1).eta)\n",
+    "        ee_fwdJet_leadbJet = np.abs(ee_fwdJet_leadbJet.i0.eta - ee_fwdJet_leadbJet.i1.eta)\n",
     "        ee_fwdJet_subleadbJet = ee_jetcross[ee_jetcross.counts >= 2][:, 1]\n",
-    "        ee_fwdJet_subleadbJet = np.abs((ee_fwdJet_subleadbJet.i0 - ee_fwdJet_subleadbJet.i1).eta)\n",
+    "        ee_fwdJet_subleadbJet = np.abs(ee_fwdJet_subleadbJet.i0.eta - ee_fwdJet_subleadbJet.i1.eta)\n",
     "        ee_fwdJet_closestLepton = (ee_lightjets.eta.max() - tights_2e.eta).min()\n",
     "        ee_fwdJet_closestLepton = ee_fwdJet_closestLepton[np.invert(np.isinf(ee_fwdJet_closestLepton))]\n",
     "        ee_highpT_sslp = tights_2e[np.abs(tights_2e.charge[:, 0] + tights_2e.charge[:, 1]) == 2]\n",
@@ -606,6 +606,9 @@
     "        for key in fileset:\n",
     "            eventries[key] = uproot.numentries(fileset[key], 'Events')\n",
     "            sumcheck += uproot.numentries(fileset[key], 'Events')\n",
+    "            \n",
+    "        print(eventries)\n",
+    "        print(sumcheck)\n",
     "        \n",
     "        # Cross-sections are found in the draft note. Weights follow the formula of [cross-section * integrate luminosity]/[events]\n",
     "        weights = {'tHq': (lum*0.7927)/eventries['tHq'],\n",
