eta fix (again)

--- a/analysis-casa.ipynb
+++ b/analysis-casa.ipynb
@@ -544,9 +544,9 @@
     "        lll_lightjets = jets_3lep[jets_3lep.btagCSVV2 <= loose_wp]\n",
     "        lll_jetcross = jets_3lep[jets_3lep.btagCSVV2 > loose_wp].cross(lll_lightjets[lll_lightjets.eta == lll_lightjets.eta.max()])\n",
     "        lll_fwdJet_leadbJet = lll_jetcross[lll_jetcross.counts >= 1][:, 0]\n",
-    "        lll_fwdJet_leadbJet = np.abs((lll_fwdJet_leadbJet.i0 - lll_fwdJet_leadbJet.i1).eta)\n",
+    "        lll_fwdJet_leadbJet = np.abs(lll_fwdJet_leadbJet.i0.eta - lll_fwdJet_leadbJet.i1.eta)\n",
     "        lll_fwdJet_subleadbJet = lll_jetcross[lll_jetcross.counts >= 2][:, 1]\n",
-    "        lll_fwdJet_subleadbJet = np.abs((lll_fwdJet_subleadbJet.i0 - lll_fwdJet_subleadbJet.i1).eta)\n",
+    "        lll_fwdJet_subleadbJet = np.abs(lll_fwdJet_subleadbJet.i0.eta - lll_fwdJet_subleadbJet.i1.eta).eta\n",
     "        lll_fwdJet_closestLepton = channel_fwdeta_jetlep(tight_lll_e.starts, tight_lll_e.stops, tight_lll_mu.starts, tight_lll_mu.stops,\n",
     "                                              lll_lightjets.eta.max(), tight_lll_e.eta.content, tight_lll_mu.eta.content)\n",
     "        lll_highpT_sslp = channel_dphi_ssp(tight_lll_e.starts, tight_lll_e.stops, tight_lll_mu.starts, tight_lll_mu.stops,\n",
@@ -564,9 +564,9 @@
     "        mumu_lightjets = jets_2mu[jets_2mu.btagCSVV2 <= loose_wp]\n",
     "        mumu_jetcross = jets_2mu[jets_2mu.btagCSVV2 > loose_wp].cross(mumu_lightjets[mumu_lightjets.eta == mumu_lightjets.eta.max()])\n",
     "        mumu_fwdJet_leadbJet = mumu_jetcross[mumu_jetcross.counts >= 1][:, 0]\n",
-    "        mumu_fwdJet_leadbJet = np.abs((mumu_fwdJet_leadbJet.i0 - mumu_fwdJet_leadbJet.i1).eta)\n",
+    "        mumu_fwdJet_leadbJet = np.abs(mumu_fwdJet_leadbJet.i0.eta - mumu_fwdJet_leadbJet.i1.eta)\n",
     "        mumu_fwdJet_subleadbJet = mumu_jetcross[mumu_jetcross.counts >= 2][:, 1]\n",
-    "        mumu_fwdJet_subleadbJet = np.abs((mumu_fwdJet_subleadbJet.i0 - mumu_fwdJet_subleadbJet.i1).eta)\n",
+    "        mumu_fwdJet_subleadbJet = np.abs(mumu_fwdJet_subleadbJet.i0.eta - mumu_fwdJet_subleadbJet.i1.eta)\n",
     "        mumu_fwdJet_closestLepton = (mumu_lightjets.eta.max() - tights_2mu.eta).min()\n",
     "        mumu_fwdJet_closestLepton = mumu_fwdJet_closestLepton[np.invert(np.isinf(mumu_fwdJet_closestLepton))]\n",
     "        mumu_highpT_sslp = tights_2mu[np.abs(tights_2mu.charge[:, 0] + tights_2mu.charge[:, 1]) == 2]\n",
@@ -581,9 +581,9 @@
     "        emu_lightjets = jets_emu[jets_emu.btagCSVV2 <= loose_wp]\n",
     "        emu_jetcross = jets_emu[jets_emu.btagCSVV2 > loose_wp].cross(emu_lightjets[emu_lightjets.eta == emu_lightjets.eta.max()])\n",
     "        emu_fwdJet_leadbJet = emu_jetcross[emu_jetcross.counts >= 1][:, 0]\n",
-    "        emu_fwdJet_leadbJet = np.abs((emu_fwdJet_leadbJet.i0 - emu_fwdJet_leadbJet.i1).eta)\n",
+    "        emu_fwdJet_leadbJet = np.abs(emu_fwdJet_leadbJet.i0.eta - emu_fwdJet_leadbJet.i1.eta)\n",
     "        emu_fwdJet_subleadbJet = emu_jetcross[emu_jetcross.counts >= 2][:, 1]\n",
-    "        emu_fwdJet_subleadbJet = np.abs((emu_fwdJet_subleadbJet.i0 - emu_fwdJet_subleadbJet.i1).eta)\n",
+    "        emu_fwdJet_subleadbJet = np.abs(emu_fwdJet_subleadbJet.i0.eta - emu_fwdJet_subleadbJet.i1.eta)\n",
     "        mu_fwdJet_closestLepton = (emu_lightjets.eta.max() - tights_1mu.eta)\n",
     "        e_fwdJet_closestLepton = (emu_lightjets.eta.max() - tights_1e.eta)\n",
     "        emu_fwdJet_closestLepton = np.minimum(mu_fwdJet_closestLepton, e_fwdJet_closestLepton)\n",
@@ -601,9 +601,9 @@
     "        ee_lightjets = jets_2e[jets_2e.btagCSVV2 <= loose_wp]\n",
     "        ee_jetcross = jets_2e[jets_2e.btagCSVV2 > loose_wp].cross(ee_lightjets[ee_lightjets.eta == ee_lightjets.eta.max()])\n",
     "        ee_fwdJet_leadbJet = ee_jetcross[ee_jetcross.counts >= 1][:, 0]\n",
-    "        ee_fwdJet_leadbJet = np.abs((ee_fwdJet_leadbJet.i0 - ee_fwdJet_leadbJet.i1).eta)\n",
+    "        ee_fwdJet_leadbJet = np.abs(ee_fwdJet_leadbJet.i0.eta - ee_fwdJet_leadbJet.i1.eta)\n",
     "        ee_fwdJet_subleadbJet = ee_jetcross[ee_jetcross.counts >= 2][:, 1]\n",
-    "        ee_fwdJet_subleadbJet = np.abs((ee_fwdJet_subleadbJet.i0 - ee_fwdJet_subleadbJet.i1).eta)\n",
+    "        ee_fwdJet_subleadbJet = np.abs(ee_fwdJet_subleadbJet.i0.eta - ee_fwdJet_subleadbJet.i1.eta)\n",
     "        ee_fwdJet_closestLepton = (ee_lightjets.eta.max() - tights_2e.eta).min()\n",
     "        ee_fwdJet_closestLepton = ee_fwdJet_closestLepton[np.invert(np.isinf(ee_fwdJet_closestLepton))]\n",
     "        ee_highpT_sslp = tights_2e[np.abs(tights_2e.charge[:, 0] + tights_2e.charge[:, 1]) == 2]\n",
@@ -613,6 +613,51 @@
     "        ee_NJetMed = jets_2e[(np.abs(jets_2e.eta) < 2.4)].counts\n",
     "        ee_NJetNONMED = jets_2e[(np.abs(jets_2e.eta) > 1) & (jets_2e.btagCSVV2 <= loose_wp)].counts\n",
     "        ee_TotalCharge = tights_2e.charge.sum()\n",
+    "        \n",
+    "        # Actually graphing all of the selected data.\n",
+    "        output['lll_3rdLepton_pT'].fill(dataset=dataset, lll_3rdLepton_pT=lll_3rdLepton_pT)\n",
+    "        output['lll_fwdJet_leadbJet'].fill(dataset=dataset, lll_fwdJet_leadbJet=lll_fwdJet_leadbJet)\n",
+    "        output['lll_fwdJet_subleadbJet'].fill(dataset=dataset, lll_fwdJet_subleadbJet=lll_fwdJet_subleadbJet)\n",
+    "        output['lll_fwdJet_closestLepton'].fill(dataset=dataset, lll_fwdJet_closestLepton=lll_fwdJet_closestLepton)\n",
+    "        output['lll_highpT_sslp'].fill(dataset=dataset, lll_highpT_sslp=lll_highpT_sslp)\n",
+    "        output['lll_jetMaxEta'].fill(dataset=dataset, lll_jetMaxEta=lll_jetMaxEta.flatten())\n",
+    "        output['lll_minDelR'].fill(dataset=dataset, lll_minDelR=lll_minDelR)\n",
+    "        output['lll_NJetMED'].fill(dataset=dataset, lll_NJetMED=lll_NJetMED.flatten())\n",
+    "        output['lll_NJetNONMED'].fill(dataset=dataset, lll_NJetNONMED=lll_NJetNONMED.flatten())\n",
+    "        output['lll_TotalCharge'].fill(dataset=dataset, lll_TotalCharge=lll_TotalCharge)\n",
+    "        \n",
+    "        output['mumu_subleadLepton_pT'].fill(dataset=dataset, mumu_subleadLepton_pT=mumu_subleadLepton_pT)\n",
+    "        output['mumu_fwdJet_leadbJet'].fill(dataset=dataset, mumu_fwdJet_leadbJet=mumu_fwdJet_leadbJet)\n",
+    "        output['mumu_fwdJet_subleadbJet'].fill(dataset=dataset, mumu_fwdJet_subleadbJet=mumu_fwdJet_subleadbJet)\n",
+    "        output['mumu_fwdJet_closestLepton'].fill(dataset=dataset, mumu_fwdJet_closestLepton=mumu_fwdJet_closestLepton)\n",
+    "        output['mumu_highpT_sslp'].fill(dataset=dataset, mumu_highpT_sslp=mumu_highpT_sslp)\n",
+    "        output['mumu_jetMaxEta'].fill(dataset=dataset, mumu_jetMaxEta=mumu_jetMaxEta.flatten())\n",
+    "        output['mumu_minDelR'].fill(dataset=dataset, mumu_minDelR=mumu_minDelR)\n",
+    "        output['mumu_NJetMED'].fill(dataset=dataset, mumu_NJetMED=mumu_NJetMED.flatten())\n",
+    "        output['mumu_NJetNONMED'].fill(dataset=dataset, mumu_NJetNONMED=mumu_NJetNONMED.flatten())\n",
+    "        output['mumu_TotalCharge'].fill(dataset=dataset, mumu_TotalCharge=mumu_TotalCharge.flatten())\n",
+    "        \n",
+    "        output['emu_subleadLepton_pT'].fill(dataset=dataset, emu_subleadLepton_pT=emu_subleadLepton_pT.flatten())\n",
+    "        output['emu_fwdJet_leadbJet'].fill(dataset=dataset, emu_fwdJet_leadbJet=emu_fwdJet_leadbJet)\n",
+    "        output['emu_fwdJet_subleadbJet'].fill(dataset=dataset, emu_fwdJet_subleadbJet=emu_fwdJet_subleadbJet)\n",
+    "        output['emu_fwdJet_closestLepton'].fill(dataset=dataset, emu_fwdJet_closestLepton=emu_fwdJet_closestLepton.flatten())\n",
+    "        output['emu_highpT_sslp'].fill(dataset=dataset, emu_highpT_sslp=emu_highpT_sslp.flatten())\n",
+    "        output['emu_jetMaxEta'].fill(dataset=dataset, emu_jetMaxEta=emu_jetMaxEta.flatten())\n",
+    "        output['emu_minDelR'].fill(dataset=dataset, emu_minDelR=emu_minDelR.flatten())\n",
+    "        output['emu_NJetMED'].fill(dataset=dataset, emu_NJetMED=emu_NJetMED.flatten())\n",
+    "        output['emu_NJetNONMED'].fill(dataset=dataset, emu_NJetNONMED=emu_NJetNONMED.flatten())\n",
+    "        output['emu_TotalCharge'].fill(dataset=dataset, emu_TotalCharge=emu_TotalCharge.flatten())\n",
+    "        \n",
+    "        output['ee_subleadLepton_pT'].fill(dataset=dataset, ee_subleadLepton_pT=ee_subleadLepton_pT)\n",
+    "        output['ee_fwdJet_leadbJet'].fill(dataset=dataset, ee_fwdJet_leadbJet=ee_fwdJet_leadbJet)\n",
+    "        output['ee_fwdJet_subleadbJet'].fill(dataset=dataset, ee_fwdJet_subleadbJet=ee_fwdJet_subleadbJet)\n",
+    "        output['ee_fwdJet_closestLepton'].fill(dataset=dataset, ee_fwdJet_closestLepton=ee_fwdJet_closestLepton)\n",
+    "        output['ee_highpT_sslp'].fill(dataset=dataset, ee_highpT_sslp=ee_highpT_sslp)\n",
+    "        output['ee_jetMaxEta'].fill(dataset=dataset, ee_jetMaxEta=ee_jetMaxEta.flatten())\n",
+    "        output['ee_minDelR'].fill(dataset=dataset, ee_minDelR=ee_minDelR)\n",
+    "        output['ee_NJetMED'].fill(dataset=dataset, ee_NJetMED=ee_NJetMed.flatten())\n",
+    "        output['ee_NJetNONMED'].fill(dataset=dataset, ee_NJetNONMED=ee_NJetNONMED.flatten())\n",
+    "        output['ee_TotalCharge'].fill(dataset=dataset, ee_TotalCharge=ee_TotalCharge.flatten())\n",
     "        \n",
     "        # Actually graphing all of the selected data.\n",
     "        output['lll_3rdLepton_pT'].fill(dataset=dataset, lll_3rdLepton_pT=lll_3rdLepton_pT)\n",
