--- a/benchmarks/example7.ipynb
+++ b/benchmarks/example7.ipynb
@@ -92,143 +92,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'protocol': 'tls://', 'security': Security(require_encryption=True, tls_ca_file='/etc/cmsaf-secrets/ca.pem', tls_client_cert='/etc/cmsaf-secrets/hostcert.pem', tls_client_key='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_cert='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_key='/etc/cmsaf-secrets/hostcert.pem', tls_worker_cert='/etc/cmsaf-secrets/hostcert.pem', tls_worker_key='/etc/cmsaf-secrets/hostcert.pem'), 'log_directory': 'logs', 'silence_logs': 'DEBUG', 'scheduler_options': {'port': 8786, 'dashboard_address': '8787', 'protocol': 'tls', 'external_address': 'tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786'}, 'job_extra': {'universe': 'docker', 'docker_image': 'coffeateam/coffea-casa-analysis:0.2.23', 'container_service_names': 'dask', 'dask_container_port': 8786, 'transfer_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'encrypt_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'transfer_output_files': '', 'when_to_transfer_output': 'ON_EXIT', 'should_transfer_files': 'YES', 'Stream_Output': 'False', 'Stream_Error': 'False', '+DaskSchedulerAddress': '\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\"'}}\n"
+      "[#########                               ] | 23% Completed |  1min  1.0s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Clear task state\n",
-      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.145.131:8786\n",
-      "distributed.scheduler - INFO -   dashboard at:                     :8787\n",
-      "distributed.scheduler - INFO - Receive client connection: Client-5ff25165-f2cb-11ea-9e0c-ae5d2030f5f0\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:47974 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed | 33.9s"
+      "[###########                             ] | 29% Completed |  1min  2.1s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.82:32769', name: htcondor--7504834.0--, memory: 0, processing: 1>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.82:32769\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:47988 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[#                                       ] | 3% Completed | 34.7s8s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32782', name: htcondor--7504837.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32782\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#                                       ] | 3% Completed | 36.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.82:32770', name: htcondor--7504835.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.82:32770\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#                                       ] | 3% Completed | 38.6s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32856', name: htcondor--7504836.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32856\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 92% Completed |  3min 18.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504834.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.82:32769', name: htcondor--7504834.0--, memory: 6, processing: 4>}\n",
-      "distributed.scheduler - INFO - Moving 5 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.82:32769', name: htcondor--7504834.0--, memory: 6, processing: 4>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.82:32769\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 94% Completed |  3min 23.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504837.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.206:32782', name: htcondor--7504837.0--, memory: 37, processing: 2>}\n",
-      "distributed.scheduler - INFO - Moving 36 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.206:32782', name: htcondor--7504837.0--, memory: 37, processing: 2>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.206:32782\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 96% Completed |  3min 32.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504836.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.3:32856', name: htcondor--7504836.0--, memory: 34, processing: 1>}\n",
-      "distributed.scheduler - INFO - Moving 33 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.3:32856', name: htcondor--7504836.0--, memory: 34, processing: 1>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.3:32856\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed |  3min 44.4s\r"
+      "[########################################] | 100% Completed |  1min 58.5s\r"
      ]
     }
    ],
@@ -238,9 +130,7 @@
     "from dask.distributed import Client\n",
     "from coffea_casa import CoffeaCasaCluster\n",
     "\n",
-    "cluster = CoffeaCasaCluster()\n",
-    "cluster.adapt(minimum=4, maximum=16)\n",
-    "client = Client(cluster)\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
@@ -258,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6790800e50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb293556c10>"
       ]
      },
      "execution_count": 4,
