--- a/benchmarks/example1.ipynb
+++ b/benchmarks/example1.ipynb
@@ -68,121 +68,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'protocol': 'tls://', 'security': Security(require_encryption=True, tls_ca_file='/etc/cmsaf-secrets/ca.pem', tls_client_cert='/etc/cmsaf-secrets/hostcert.pem', tls_client_key='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_cert='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_key='/etc/cmsaf-secrets/hostcert.pem', tls_worker_cert='/etc/cmsaf-secrets/hostcert.pem', tls_worker_key='/etc/cmsaf-secrets/hostcert.pem'), 'log_directory': 'logs', 'silence_logs': 'DEBUG', 'scheduler_options': {'port': 8786, 'dashboard_address': '8787', 'protocol': 'tls', 'external_address': 'tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786'}, 'job_extra': {'universe': 'docker', 'docker_image': 'coffeateam/coffea-casa-analysis:0.2.23', 'container_service_names': 'dask', 'dask_container_port': 8786, 'transfer_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'encrypt_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'transfer_output_files': '', 'when_to_transfer_output': 'ON_EXIT', 'should_transfer_files': 'YES', 'Stream_Output': 'False', 'Stream_Error': 'False', '+DaskSchedulerAddress': '\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\"'}}\n"
+      "[#                                       ] | 2% Completed | 27.1s4s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Clear task state\n",
-      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.145.131:8786\n",
-      "distributed.scheduler - INFO -   dashboard at:                     :8787\n",
-      "distributed.scheduler - INFO - Receive client connection: Client-6d38b79f-f2c1-11ea-8722-ae5d2030f5f0\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:43084 remote=tls://localhost:8786>\n",
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:43080 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed |  3.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32775', name: htcondor--7504805.0--, memory: 0, processing: 1>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32775\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[                                        ] | 0% Completed |  5.1s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32843', name: htcondor--7504804.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32843\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[                                        ] | 0% Completed |  7.6s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.91:32795', name: htcondor--7504807.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.91:32795\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###                                     ] | 8% Completed |  9.6s3s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32844', name: htcondor--7504808.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32844\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#################                       ] | 44% Completed | 28.1s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32776', name: htcondor--7504811.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32776\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[####################                    ] | 51% Completed | 31.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32845', name: htcondor--7504809.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32845\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed | 47.6s\r"
+      "[########################################] | 100% Completed |  1min  7.4s\r"
      ]
     }
    ],
@@ -192,9 +93,7 @@
     "from dask.distributed import Client\n",
     "from coffea_casa import CoffeaCasaCluster\n",
     "\n",
-    "cluster = CoffeaCasaCluster()\n",
-    "cluster.adapt(minimum=4, maximum=16)\n",
-    "client = Client(cluster)\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
@@ -212,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4dfbc42ca0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcab37e6a90>"
       ]
      },
      "execution_count": 4,
