--- a/benchmarks/example3.ipynb
+++ b/benchmarks/example3.ipynb
@@ -72,185 +72,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'protocol': 'tls://', 'security': Security(require_encryption=True, tls_ca_file='/etc/cmsaf-secrets/ca.pem', tls_client_cert='/etc/cmsaf-secrets/hostcert.pem', tls_client_key='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_cert='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_key='/etc/cmsaf-secrets/hostcert.pem', tls_worker_cert='/etc/cmsaf-secrets/hostcert.pem', tls_worker_key='/etc/cmsaf-secrets/hostcert.pem'), 'log_directory': 'logs', 'silence_logs': 'DEBUG', 'scheduler_options': {'port': 8786, 'dashboard_address': '8787', 'protocol': 'tls', 'external_address': 'tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786'}, 'job_extra': {'universe': 'docker', 'docker_image': 'coffeateam/coffea-casa-analysis:0.2.23', 'container_service_names': 'dask', 'dask_container_port': 8786, 'transfer_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'encrypt_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'transfer_output_files': '', 'when_to_transfer_output': 'ON_EXIT', 'should_transfer_files': 'YES', 'Stream_Output': 'False', 'Stream_Error': 'False', '+DaskSchedulerAddress': '\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\"'}}\n"
+      "[########################################] | 100% Completed |  4.1s\r"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Clear task state\n",
-      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.145.131:8786\n",
-      "distributed.scheduler - INFO -   dashboard at:                     :8787\n",
-      "distributed.scheduler - INFO - Receive client connection: Client-cba30e87-f2c3-11ea-8d0c-ae5d2030f5f0\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:44122 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed | 11.6s"
+      "[##################################      ] | 85% Completed |  1min  9.2s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32849', name: htcondor--7504817.0--, memory: 0, processing: 1>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32849\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:44444 remote=tls://localhost:8786>\n",
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:44446 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 1% Completed |  8.7s9s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32850', name: htcondor--7504818.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32850\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###                                     ] | 7% Completed | 26.5s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.183.52:32771', name: htcondor--7504821.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.183.52:32771\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###                                     ] | 7% Completed | 27.7s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32778', name: htcondor--7504820.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32778\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###                                     ] | 9% Completed | 32.1s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32851', name: htcondor--7504819.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32851\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  1min 27.9s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504818.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.3:32850', name: htcondor--7504818.0--, memory: 3, processing: 2>}\n",
-      "distributed.scheduler - INFO - Moving 2 keys to other workers\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  1min 28.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.3:32850', name: htcondor--7504818.0--, memory: 3, processing: 2>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.3:32850\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 95% Completed |  1min 28.9s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504819.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.3:32851', name: htcondor--7504819.0--, memory: 9, processing: 1>}\n",
-      "distributed.scheduler - INFO - Moving 8 keys to other workers\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 95% Completed |  1min 29.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.3:32851', name: htcondor--7504819.0--, memory: 9, processing: 1>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.3:32851\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 97% Completed |  1min 31.9s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504820.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.206:32778', name: htcondor--7504820.0--, memory: 20, processing: 0>}\n",
-      "distributed.scheduler - INFO - Moving 19 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.206:32778', name: htcondor--7504820.0--, memory: 20, processing: 0>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.206:32778\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed |  1min 33.7s\r"
+      "[########################################] | 100% Completed |  1min 41.8s\r"
      ]
     }
    ],
@@ -260,9 +111,7 @@
     "from dask.distributed import Client\n",
     "from coffea_casa import CoffeaCasaCluster\n",
     "\n",
-    "cluster = CoffeaCasaCluster()\n",
-    "cluster.adapt(minimum=4, maximum=16)\n",
-    "client = Client(cluster)\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
@@ -280,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1759bfbf10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f867ff09dc0>"
       ]
      },
      "execution_count": 4,
