--- a/benchmarks/example5.ipynb
+++ b/benchmarks/example5.ipynb
@@ -78,168 +78,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'protocol': 'tls://', 'security': Security(require_encryption=True, tls_ca_file='/etc/cmsaf-secrets/ca.pem', tls_client_cert='/etc/cmsaf-secrets/hostcert.pem', tls_client_key='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_cert='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_key='/etc/cmsaf-secrets/hostcert.pem', tls_worker_cert='/etc/cmsaf-secrets/hostcert.pem', tls_worker_key='/etc/cmsaf-secrets/hostcert.pem'), 'log_directory': 'logs', 'silence_logs': 'DEBUG', 'scheduler_options': {'port': 8786, 'dashboard_address': '8787', 'protocol': 'tls', 'external_address': 'tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786'}, 'job_extra': {'universe': 'docker', 'docker_image': 'coffeateam/coffea-casa-analysis:0.2.23', 'container_service_names': 'dask', 'dask_container_port': 8786, 'transfer_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'encrypt_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'transfer_output_files': '', 'when_to_transfer_output': 'ON_EXIT', 'should_transfer_files': 'YES', 'Stream_Output': 'False', 'Stream_Error': 'False', '+DaskSchedulerAddress': '\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\"'}}\n"
+      "[##                                      ] | 7% Completed | 34.0s0s"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Clear task state\n",
-      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.145.131:8786\n",
-      "distributed.scheduler - INFO -   dashboard at:                     :8787\n",
-      "distributed.scheduler - INFO - Receive client connection: Client-199bfe69-f2c7-11ea-9482-ae5d2030f5f0\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:45192 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed | 39.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.78:32770', name: htcondor--7504826.0--, memory: 0, processing: 1>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.78:32770\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[##                                      ] | 7% Completed | 30.4s7s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32780', name: htcondor--7504829.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32780\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[##                                      ] | 7% Completed | 32.5s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.78:32771', name: htcondor--7504827.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.78:32771\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###                                     ] | 8% Completed | 35.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32853', name: htcondor--7504828.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32853\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  2min 11.2s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504826.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.78:32770', name: htcondor--7504826.0--, memory: 9, processing: 2>}\n",
-      "distributed.scheduler - INFO - Moving 8 keys to other workers\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  2min 11.3s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.78:32770', name: htcondor--7504826.0--, memory: 9, processing: 2>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.78:32770\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 95% Completed |  2min 13.2s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504827.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.78:32771', name: htcondor--7504827.0--, memory: 1, processing: 3>}\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.78:32771', name: htcondor--7504827.0--, memory: 1, processing: 3>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.78:32771\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 96% Completed |  2min 16.1s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504829.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.206:32780', name: htcondor--7504829.0--, memory: 35, processing: 2>}\n",
-      "distributed.scheduler - INFO - Moving 34 keys to other workers\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 96% Completed |  2min 16.2s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.206:32780', name: htcondor--7504829.0--, memory: 35, processing: 2>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.206:32780\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed |  2min 24.5s\r"
+      "[########################################] | 100% Completed |  1min 39.3s\r"
      ]
     }
    ],
@@ -249,9 +102,7 @@
     "from dask.distributed import Client\n",
     "from coffea_casa import CoffeaCasaCluster\n",
     "\n",
-    "cluster = CoffeaCasaCluster()\n",
-    "cluster.adapt(minimum=4, maximum=16)\n",
-    "client = Client(cluster)\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
@@ -269,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd0362c1e20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc262c7580>"
       ]
      },
      "execution_count": 4,
