--- a/benchmarks/example6.ipynb
+++ b/benchmarks/example6.ipynb
@@ -83,156 +83,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'protocol': 'tls://', 'security': Security(require_encryption=True, tls_ca_file='/etc/cmsaf-secrets/ca.pem', tls_client_cert='/etc/cmsaf-secrets/hostcert.pem', tls_client_key='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_cert='/etc/cmsaf-secrets/hostcert.pem', tls_scheduler_key='/etc/cmsaf-secrets/hostcert.pem', tls_worker_cert='/etc/cmsaf-secrets/hostcert.pem', tls_worker_key='/etc/cmsaf-secrets/hostcert.pem'), 'log_directory': 'logs', 'silence_logs': 'DEBUG', 'scheduler_options': {'port': 8786, 'dashboard_address': '8787', 'protocol': 'tls', 'external_address': 'tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786'}, 'job_extra': {'universe': 'docker', 'docker_image': 'coffeateam/coffea-casa-analysis:0.2.23', 'container_service_names': 'dask', 'dask_container_port': 8786, 'transfer_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'encrypt_input_files': '/etc/cmsaf-secrets/ca.pem, /etc/cmsaf-secrets/hostcert.pem, /etc/cmsaf-secrets/xcache_token', 'transfer_output_files': '', 'when_to_transfer_output': 'ON_EXIT', 'should_transfer_files': 'YES', 'Stream_Output': 'False', 'Stream_Error': 'False', '+DaskSchedulerAddress': '\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\"'}}\n"
+      "[####                                    ] | 10% Completed | 31.7ss"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "distributed.scheduler - INFO - Clear task state\n",
-      "distributed.scheduler - INFO -   Scheduler at: tls://192.168.145.131:8786\n",
-      "distributed.scheduler - INFO -   dashboard at:                     :8787\n",
-      "distributed.scheduler - INFO - Receive client connection: Client-a5540429-f2ca-11ea-9c4a-ae5d2030f5f0\n",
-      "distributed.core - INFO - Starting established connection\n"
+      "distributed.comm.tcp - WARNING - Closing dangling stream in <TLS  local=tls://127.0.0.1:45900 remote=tls://localhost:8786>\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed | 56.9s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32854', name: htcondor--7504830.0--, memory: 0, processing: 1>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32854\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#                                       ] | 2% Completed | 24.8sin 11.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.3:32855', name: htcondor--7504831.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.3:32855\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#                                       ] | 3% Completed | 28.8s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.206:32781', name: htcondor--7504833.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.206:32781\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###############################         ] | 78% Completed |  2min 43.7s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Register worker <Worker 'tls://129.93.182.82:32768', name: htcondor--7504832.0--, memory: 0, processing: 0>\n",
-      "distributed.scheduler - INFO - Starting worker compute stream, tls://129.93.182.82:32768\n",
-      "distributed.core - INFO - Starting established connection\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  3min  3.4s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504830.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.3:32854', name: htcondor--7504830.0--, memory: 11, processing: 3>}\n",
-      "distributed.scheduler - INFO - Moving 10 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.3:32854', name: htcondor--7504830.0--, memory: 11, processing: 3>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 93% Completed |  3min  3.5s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.core - INFO - Removing comms to tls://129.93.182.3:32854\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[#####################################   ] | 94% Completed |  3min  5.5s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504832.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.82:32768', name: htcondor--7504832.0--, memory: 7, processing: 3>}\n",
-      "distributed.scheduler - INFO - Moving 6 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.82:32768', name: htcondor--7504832.0--, memory: 7, processing: 3>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.82:32768\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[######################################  ] | 97% Completed |  3min 11.5s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.scheduler - INFO - Retire worker names ('htcondor--7504831.0--',)\n",
-      "distributed.scheduler - INFO - Retire workers {<Worker 'tls://129.93.182.3:32855', name: htcondor--7504831.0--, memory: 5, processing: 1>}\n",
-      "distributed.scheduler - INFO - Moving 4 keys to other workers\n",
-      "distributed.scheduler - INFO - Remove worker <Worker 'tls://129.93.182.3:32855', name: htcondor--7504831.0--, memory: 5, processing: 1>\n",
-      "distributed.core - INFO - Removing comms to tls://129.93.182.3:32855\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed |  3min 17.2s\r"
+      "[########################################] | 100% Completed |  1min 21.6s\r"
      ]
     }
    ],
@@ -242,9 +107,7 @@
     "from dask.distributed import Client\n",
     "from coffea_casa import CoffeaCasaCluster\n",
     "\n",
-    "cluster = CoffeaCasaCluster()\n",
-    "cluster.adapt(minimum=4, maximum=16)\n",
-    "client = Client(cluster)\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
@@ -262,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f76abd97af0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f201e2c86a0>"
       ]
      },
      "execution_count": 4,
@@ -294,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f76abcd6df0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f201e2a1730>"
       ]
      },
      "execution_count": 5,
