renaming walkthrough to tutorial

--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -111,7 +111,7 @@
     "<img src=\"docs/dask.png\" alt=\"Drawing\" width=\"35%\"/>\n",
     "\n",
     "\n",
-    "You can click on the UNL HTCondor Cluster button and drag it out into a block of the Jupyter Notebook, and it will paste everything necessary to connect to the Dask scheduler. It should look something like this:\n",
+    "You can click on the UNL HTCondor Cluster button and drag it out into a block of the Jupyter Notebook, and it will paste everything necessary to connect to the Dask scheduler. It should look something like this (of course, the IP will be different):\n",
     "\n",
     "\n",
     "<img src=\"docs/daskclient.png\" alt=\"Drawing\" width=\"50%\"/>\n",
@@ -131,6 +131,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Running the Analysis\n",
+    "\n",
     "Then, all we have to do is run the executor. This is done through the `processor.run_uproot_job` method. It requires the following to be provided as arguments:\n",
     "\n",
     "`fileset`: The files we want to run our analysis on. In our case, the sample file defined earlier.\n",
